Application workflow fixes